syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.resource";

import "google/protobuf/timestamp.proto";
import "stremio/core/types/stream.proto";

message Video {
  required string id = 1;
  required string title = 2;
  optional google.protobuf.Timestamp released = 3;
  optional string overview = 4;
  optional string thumbnail = 5;
  repeated Stream streams = 6;
  optional SeriesInfo seriesInfo = 7;
  required bool upcoming = 8;
  required bool watched = 9;
  required bool current_video = 10;
  // Watch progress percentage
  optional double progress = 11;
  // scheduled: bool,

  required VideoDeepLinks deep_links = 12;

  message SeriesInfo {
    required int64 season = 1;
    required int64 episode = 2;
  }
}

message VideoDeepLinks {
  required string meta_details_videos = 1;
  required string meta_details_streams = 2;
  optional string player = 3;
  required ExternalPlayerLink external_player = 4;

  message ExternalPlayerLink {
    optional string download = 1;
    optional string streaming = 2;
    optional OpenPlayerLink open_player = 3;
  }

  message OpenPlayerLink {
    optional string ios = 1;
    optional string android = 2;
    optional string macos = 3;
    optional string visionos = 4;
  }
}